change logging style

--- a/trunk/Molecule.WebSite/Log4Net.config
+++ b/trunk/Molecule.WebSite/Log4Net.config
@@ -2,7 +2,7 @@
 <log4net>
   <appender name="RollingLogFileAppender"
         type="log4net.Appender.RollingFileAppender">
-    <file value="webmusic.log" />
+    <file type="log4net.Util.PatternString" value="logs/molecule-%property{currentuser}.txt" />
     <appendToFile value="true" />
     <datePattern value="yyyyMMdd" />
     <rollingStyle value="Date" />
