--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="admin\Default.aspx" />
+    <Content Include="atomes\photo\images\office-calendar.png" />
     <Content Include="Web.config" />
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
@@ -145,7 +146,7 @@
     <Content Include="App_Themes\bloup\images\molecule-32.png" />
     <Content Include="App_Themes\bloup\images\molecule-48.png" />
     <Content Include="App_Themes\bloup\images\molecule-64.png" />
-    <Content Include="App_Themes\bloup\molecule.cssx" />
+    <None Include="App_Themes\bloup\molecule.cssx" />
     <Content Include="App_Themes\bloup\progressbarlayout.css" />
     <Content Include="App_Themes\default\common.css" />
     <Content Include="atomes\photo\Admin.aspx" />
