--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -18,17 +18,11 @@
 	</configSections>
 	<system.web>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="36000"/>
-		<customErrors mode="Off">
+		<customErrors mode="On">
 			<error statusCode="500" redirect="~/Error.aspx"/>
 		</customErrors>
 		<globalization uiCulture="auto" culture="auto"/>
-		<!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this 
-            affects performance, set this value to true only 
-            during development.
-        -->
-		<compilation debug="true">
+		<compilation debug="false">
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -40,9 +34,6 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login.aspx" name=".ASPXFORMSAUTH" timeout="600" slidingExpiration="true"/>
 		</authentication>
-		<authorization>
-			
-		</authorization>
 		<membership defaultProvider="SqliteProvider" userIsOnlineTimeWindow="120">
 			<providers>
 				<clear/>
@@ -77,10 +68,8 @@
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
-            <add verb="*" path="molecule.cssx" type="Molecule.WebSite.CssHandler" validate="false"/>
-            <add verb="*" path="*.media" type="WebMusic.MediaFileHandler" validate="false"/>
-
-			<!--<add verb="*" path="~/images/*.*" type="Molecule.WebSite.ImageHandler" validate="false"/>-->
+      <add verb="*" path="molecule.cssx" type="Molecule.WebSite.CssHandler" validate="false"/>
+      <add verb="*" path="*.media" type="WebMusic.MediaFileHandler" validate="false"/>
 		</httpHandlers>
 		<httpModules>
 			<add name="UploadHttpModule" type="Brettle.Web.NeatUpload.UploadHttpModule, Brettle.Web.NeatUpload"/>
