--- a/trunk/Molecule.WebSite/Log4Net.config
+++ b/trunk/Molecule.WebSite/Log4Net.config
@@ -8,7 +8,7 @@
     <rollingStyle value="Date" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <acceptOnMatch value="true" />
-      <levelMin value="DEBUG" />
+      <levelMin value="INFO" />
       <levelMax value="FATAL" />
     </filter>
     <layout type="log4net.Layout.PatternLayout">
