--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -487,7 +487,7 @@
     <Content Include="App_Browsers\w3validator.browser" />
     <None Include="App_Themes\bloup\images\molecule-6-rot.svg" />
     <None Include="Atome.xsd" />
-    <None Include="atomes\photo\scripts\default.js" />
+    <Content Include="atomes\photo\scripts\default.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Themes\raw\" />
