--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -216,6 +216,7 @@
     <None Include="Atome.xsd" />
     <Content Include="atomes\photo\scripts\default.js" />
     <Content Include="atomes\photo\Download.aspx" />
+    <None Include="script\default.js" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="admin\Default.aspx.cs">
@@ -492,6 +493,7 @@
     <Folder Include="App_Themes\raw\" />
     <Folder Include="images\" />
     <Folder Include="logs\" />
+    <Folder Include="script\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
