--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -83,7 +83,9 @@
 			<namespaces>
         <add namespace="MvcContrib"/>
         <add namespace="MvcContrib.UI"/>
+        <add namespace="MvcContrib.FluentHtml"/>
         <add namespace="MvcContrib.UI.Html"/>
+        <add namespace="MvcContrib.UI.Grid"/>
         <add namespace="System.Web.Mvc"/>
 				<add namespace="System.Web.Mvc.Ajax"/>
 				<add namespace="System.Web.Mvc.Html"/>
