--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -109,6 +109,7 @@
     <Compile Include="atomes\photos\Controllers\CalendarController.cs" />
     <Compile Include="atomes\photos\Controllers\TagController.cs" />
     <Compile Include="atomes\photos\Data\CalendarItem.cs" />
+    <Compile Include="atomes\photos\Data\MonthCalendarData.cs" />
     <Compile Include="atomes\photos\Data\PhotoIndexData.cs" />
     <Compile Include="atomes\photos\Data\YearCalendarData.cs" />
     <Compile Include="atomes\photos\Views\Photo\PhotoFileResult.cs" />
@@ -281,6 +282,7 @@
     <Content Include="atomes\photos\style\photo.css" />
     <Content Include="atomes\photos\style\tag.css" />
     <Content Include="atomes\photos\style\timeline.css" />
+    <Content Include="atomes\photos\Views\Calendar\Month.aspx" />
     <Content Include="atomes\photos\Views\Calendar\Year.aspx" />
     <Content Include="atomes\photos\Views\Photo\Index.aspx" />
     <Content Include="atomes\photos\Views\Shared\PhotoLink.ascx" />
