--- a/trunk/Molecule.MvcWebSite/atomes/photos/Views/Web.config
+++ b/trunk/Molecule.MvcWebSite/atomes/photos/Views/Web.config
@@ -24,6 +24,7 @@
       <namespaces>
         <add namespace="WebPhoto.Services"/>
         <add namespace="Molecule.MvcWebSite.atomes.photos.Data"/>
+        <add namespace="Molecule.MvcWebSite.atomes.photos.Controllers"/>
         <add namespace="WebPhoto.Providers"/>
         <add namespace="System.Linq"/>
       </namespaces>
