--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -93,6 +93,10 @@
 				<add namespace="System.Web.Routing"/>
 				<add namespace="System.Linq"/>
 				<add namespace="System.Collections.Generic"/>
+        <add namespace="WebPhoto.Services"/>
+        <add namespace="Molecule.MvcWebSite.atomes.photos.Data"/>
+        <add namespace="Molecule.MvcWebSite.atomes.photos.Controllers"/>
+        <add namespace="WebPhoto.Providers"/>
 			</namespaces>
 		</pages>
 		<httpHandlers>
