--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Molecule.MvcWebSite</RootNamespace>
     <AssemblyName>Molecule.MvcWebSite</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <MvcBuildViews>false</MvcBuildViews>
+    <MvcBuildViews>true</MvcBuildViews>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -110,10 +110,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>webmusic.fr.resx</DependentUpon>
     </Compile>
-    <Compile Include="atomes\music\Admin.aspx.cs">
-      <DependentUpon>Admin.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
     <Compile Include="atomes\music\Atome.cs" />
     <Compile Include="atomes\music\Controllers\PlayerController.cs" />
     <Compile Include="atomes\music\CoverArt\CoverArtFile.aspx.cs">
@@ -125,7 +121,6 @@
     <Compile Include="atomes\music\Data\IndexData.cs" />
     <Compile Include="atomes\music\Views\Player\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="atomes\music\Download.aspx.cs">
       <DependentUpon>Download.aspx</DependentUpon>
@@ -296,7 +291,6 @@
     <None Include="App_Themes\bloup\molecule.cssx" />
     <None Include="Atome.xsd" />
     <Content Include="atomes\music\Views\Web.config" />
-    <Content Include="atomes\music\Admin.aspx" />
     <Content Include="atomes\music\Atome.xml" />
     <Content Include="atomes\music\CoverArt\CoverArtFile.aspx" />
     <Content Include="atomes\music\Views\Player\Index.aspx" />
